# Kotonoha-Tango-Helper

./: .gitignore  CMakeLists.txt  README.md  ことのはたんごヘルパー.sln
csv file formatter/: csv file formatter.cpp  csv file formatter.vcxproj  csv file formatter.vcxproj.filters
kotonoha-tango-helper/: KotonohaTangoHelper.cpp  colored_text.cpp  colored_text.h  constants.h  regex.cpp  regex.h  translation.cpp  translation.h  word_search.cpp  word_search.h
kotonoha-tango-helper/data/: data_sorted.csv
kotonoha-tango-helper/lang/: en.lang  ja.lang
ことのはたんごヘルパー/: KotonohaTangoHelper.cpp  Regex.h  regex.cpp  word.cpp  word.h  ことのはたんごヘルパー.cpp  ことのはたんごヘルパー.vcxproj  ことのはたんごヘルパー.vcxproj.filters
ことのはたんごヘルパー/output/: output.txt  output2.txt  output3.txt  recent matches skimmed.txt  recent matches.txt
